fix font size incorrection on ward table headers on mobile

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1516,12 +1516,14 @@ section.icu {
             position: relative;
             left: 12.75rem;
             max-width: 8rem;
+            font-size: 1rem;
           }
         }
 
         &.last-updated-column {
           @media (max-width: 46rem) and (orientation: portrait) {
             position: relative;
+            font-size: 1rem;
             left: -5rem;
           }
         }
